# vertica-accelerator-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/: BackupRestoreV1Api.md  BackupV1Api.md  ConfigDcUploadCallV1Api.md  ConfigV1Api.md  CronJobConfigV1Api.md  CronUpdateConfigV1Api.md  DBAutoscalingJobConfig.md  DBAutoscalingJobConfigSubcluster.md  DBSessionMonitorJobConfig.md  DatabaseDetailV1Api.md  DatabaseHibernateV1Api.md  DatabaseRescaleV1Api.md  DatabaseResizeV1Api.md  DatabaseReviveV1Api.md  DatabaseUpgradeV1Api.md  DatabaseV1Api.md  DcGraphBillingSummaryTotalV1Api.md  DcGraphBillingSummaryV1Api.md  DcGraphCpuPerHourByNodeV1Api.md  DcGraphDepotUtilizationV1Api.md  DcGraphGetReportAllUsageByTimeRangeV1Api.md  DcGraphGetReportBillingSummaryV1Api.md  DcGraphGetReportBillingTotalPerDbSummaryV1Api.md  DcGraphGetReportBillingTotalSummaryV1Api.md  DcGraphGetReportCpuPerHourByNodeV1Api.md  DcGraphGetReportDepotUtilizationV1Api.md  DcGraphGetReportMemoryUsageV1Api.md  DcGraphGetReportQueryPerHourV1Api.md  DcGraphGetReportQueryResponseDistributionV1Api.md  DcGraphGetReportTotalQueriesPerHrV1Api.md  DcGraphGetReportUsageByTimeRangeV1Api.md  DcGraphMemoryUsageV1Api.md  DcGraphQueryPerHourV1Api.md  DcGraphQueryResponseDistributionV1Api.md  DcGraphTotalQueriesPerHrV1Api.md  DnsConfigV1Api.md  IndexV1Api.md  InlineObject.md  InlineObject1.md  InlineObject10.md  (+43 more)
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_backup_restore_v1_api.py  test_backup_v1_api.py  test_config_dc_upload_call_v1_api.py  test_config_v1_api.py  test_index_v1_api.py  (+78 more)
(+133 files in other folders)
