[metadata]
name = vertica-accelerator-cli
version = 0.0.3.dev
author = XJ He
author-email = vertica-service-notification@microfocus.com
description = The Vertica Accelerator Command Line Interface (VCLI) is an alternate client for managing Vertica Accelerator databases.
long_description = file: README.md
long_description_content_type = text/markdown
summary = Vertica EON Accelerator Command Line Tool
url = https://www.vertica.com/landing-page/accelerator/
project_urls =
    Source Code Repo = https://github.com/vertica/vertica-accelerator-cli
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	'Programming Language :: Python :: 3.7',
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging
[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools_rust==0.12.1
    pkce==1.0.3
    requests==2.24.0
    environs==9.3.4
    argcomplete==1.12.3
    python-dateutil==2.8.2
    six==1.16.0
    pytest==6.2.5
[options.packages.find]
exclude =
    ez_setup
    tests
    *.tests
    *.tests.*
    tests.*
[options.extras_require]

[options.package_data]
* = 'logging.conf'

[options.entry_points]
console_scripts =
    va = vcli.vcli_main:va_command

